--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "homepage": "https://github.com/vprecup/d3stockpricecorrelation#readme",
   "dependencies": {
-    "d3": "^5.1.0"
+    "d3": "^5.1.0",
+    "d3-queue": "^3.0.7"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
