--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
-asyncio==3.4.3
 certifi==2018.4.16
-chardet==3.0.4
-dotenv-python==0.0.1
+click==6.7
+cycler==0.10.0
 elasticsearch==6.2.0
-idna==2.6
+Flask==1.0.2
+itsdangerous==0.24
+Jinja2==2.10
+kiwisolver==1.0.1
+MarkupSafe==1.0
+matplotlib==2.2.2
+numpy==1.14.5
+pandas==0.23.1
+pyparsing==2.2.0
+python-dateutil==2.7.3
 python-dotenv==0.8.2
-requests==2.18.4
+pytz==2018.4
+six==1.11.0
 urllib3==1.22
-websockets==5.0
+Werkzeug==0.14.1
